# vitpose_flash

./: .gitignore  README.md  benchmark.py  pyproject.toml  requirements.txt  test1.py
vitpose_flash/onepose/: __init__.py
vitpose_flash/onepose/datasets/: __init__.py
vitpose_flash/onepose/models/: __init__.py  factory.py
vitpose_flash/onepose/models/vitpose/: __init__.py  model.py
vitpose_flash/onepose/models/vitpose/backbone/: __init__.py  vit.py
vitpose_flash/onepose/models/vitpose/head/: __init__.py
